19 May 2005 Sylvain Pion
- Add centroid() and barycenter() for N points.

11 March 2005 Pierre Alliez
- initial version