@@ -1,3 +1,7 @@
+27 May 2005 Sylvain Pion
+- Add bounding_box().
+- Use Kernel dimension tools.
+
 19 May 2005 Sylvain Pion
 - Add centroid() and barycenter() for N points.
 
